# Hikari

./: .gitignore  Cargo.toml  LICENSE  NOTICE.md  README.md  build-debug.sh  build.sh  clean.sh
Hikari/: .editorconfig  Directory.Build.props  Directory.Packages.props  Hikari.sln
Hikari/CannonCape/: App.cs  AudioPlayer.cs  BoatSource.cs  CameraController.cs  Cannon.cs  CannonCape.csproj  FadeHelper.cs  GameControl.cs  GlbLoadHelper.cs  Ground.cs  HomeScene.cs  Input.cs  MainPlayScene.cs  Resources.cs  Scenario.cs  Shot.cs  ShotSource.cs  SkyShader.cs  SplashSource.cs
Hikari/EnumMapper/: EnumMapper.csproj
Hikari/Hikari.Core/: Arc.cs  BindGroup.cs  BindGroupData.cs  BindGroupLayout.cs  Buffer.cs  BufferCached.cs  Camera.cs  ComputeOperation.cs  ComputePipeline.cs  DeferredPlane.cs  DeferredProcess.cs  DeferredProcessMaterial.cs  DeferredProcessShader.cs  DirectionalLight.cs  EmptyTreeModel.cs  Engine.cs  EngineConsts.cs  EngineCore.Native.cs  EngineCore.ReadBuffer.cs  EngineCore.cs  EngineCoreException.cs  FrameObject.cs  GBuffer.cs  (+83 more)
HikariEngine/: Directory.Build.props  Directory.Packages.props
WgpuSample/: Directory.Build.props  WgpuSample.sln
coreelffy/: Cargo.toml
coreelffy_macros/: Cargo.toml
corehikari/: Cargo.toml
corehikari/src/: engine.rs  ffi.rs  lib.rs  screen.rs
corehikari/src/screen/: macos.rs  windows.rs
corehikari_macros/: Cargo.toml
elffycore/: Cargo.toml
elffycore/src/: engine.rs  error.rs  error_handler.rs  ffi.rs  lib.rs  screen.rs  types.rs
src/: engine.rs  ffi.rs  host_screen.rs  lib.rs  main.rs  renderer.rs  types.rs
(+599 files in other folders)
