[package]
name = "corehikari"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
pollster = "0.2.5"
smallvec = "1.10.0"
static_assertions = "1.1.0"
wgpu = "0.18.0"
winit = "0.28.1"
corehikari_macros = { path = "../corehikari_macros" }
regex = "1.7.1"
once_cell = "1.17.1"
