[package]
name = "elffycore"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
#bytemuck = { version = "1.12.3", featrue = ["derive"] }
#env_logger = "0.10.0"
#log = "0.4.17"
#pollster = "0.2.5"
#wgpu = "0.14.2"
#winit = "0.27.5"

bytemuck = { version = "1.10.0", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
pollster = "0.2.5"
smallvec = "1.10.0"
static_assertions = "1.1.0"
wgpu = "0.13.1"
winit = "0.26.1"
